UPDATE SOURCES